syntax = "proto3";

package proto;


import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message IotAgent {
	string Host	= 1 	[json_name = "host,omitempty"];
	string Protocol = 2	[json_name = "protocol,omitempty"];
        string Description = 3  [json_name = "description, omitempty"];
        string Resource = 4     [json_name = "resource, omitempty"];
}
service IotAgentService {
	rpc AddIotAgent(AddIotAgentRequest) returns (google.protobuf.Empty) {};
	rpc ListIotAgents(google.protobuf.Empty) returns (ListIotAgentsResponse) {};
	rpc GetIotAgentWithProtocol(GetIotAgentWithProtocolRequest) returns (GetIotAgentWithProtocolResponse) {};
}

message AddIotAgentRequest {
	IotAgent IotAgent = 1;
}
message ListIotAgentsResponse {
	repeated IotAgent iotAgent = 1;
}
message GetIotAgentWithProtocolRequest {
	string Protocol = 1;
}
message GetIotAgentWithProtocolResponse {
	IotAgent IotAgent = 1;
}
